Updated language translations.

--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -383,7 +383,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Silinir</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mesajların silinməsi…</string>
-  <string name="MediaOverviewActivity_Documents">Sənədlər</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Sənədlər</string> -->
   <string name="MediaOverviewActivity_Select_all">Hamısını seç</string>
   <string name="MediaOverviewActivity_collecting_attachments">Faylların toplanması…</string>
   <!--- NotificationBarManager-->
@@ -1225,7 +1225,7 @@
   <string name="media_preview__forward_title">Yönləndir</string>
   <string name="media_preview__all_media_title">Bütün media</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Sənəd yoxdur</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Sənəd yoxdur</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Mediaya ilkin baxış</string>
   <!--new_conversation_activity-->
