--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -444,7 +444,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Mažu</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mažu zprávy…</string>
-  <string name="MediaOverviewActivity_Documents">Dokumenty</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumenty</string> -->
   <string name="MediaOverviewActivity_Select_all">Označit vše</string>
   <string name="MediaOverviewActivity_collecting_attachments">Shromažďuji přílohy…</string>
   <!--- NotificationBarManager-->
@@ -1342,7 +1342,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="media_preview__forward_title">Přeposlat</string>
   <string name="media_preview__all_media_title">Všechna media</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Žádné dokumenty</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Žádné dokumenty</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Náhled multimedií</string>
   <!--new_conversation_activity-->
