--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -363,7 +363,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Ag scriosadh</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Ag scriosadh teachtaireachtaí…</string>
-  <string name="MediaOverviewActivity_Documents">Cáipéisí</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Cáipéisí</string> -->
   <string name="MediaOverviewActivity_Select_all">Roghnaigh uile</string>
   <string name="MediaOverviewActivity_collecting_attachments">Ag bailiú ceangaltáin…</string>
   <!--- NotificationBarManager-->
@@ -1089,7 +1089,7 @@ a shonrú</string>
   <string name="media_preview__forward_title">Cuir ar aghaidh</string>
   <string name="media_preview__all_media_title">Gach meán</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Níl aon cáipéisí</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Níl aon cáipéisí</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Réamhamharc ar an meán</string>
   <!--new_conversation_activity-->
