--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -426,7 +426,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Brisanje</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Brišem poruke…</string>
-  <string name="MediaOverviewActivity_Documents">Dokumenti</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumenti</string> -->
   <string name="MediaOverviewActivity_Select_all">Odaberi sve</string>
   <string name="MediaOverviewActivity_collecting_attachments">Sabirem priloge…</string>
   <!--- NotificationBarManager-->
@@ -1319,7 +1319,7 @@
   <string name="media_preview__forward_title">Naprijed</string>
   <string name="media_preview__all_media_title">Svi prilozi</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Nema dokumenata</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Nema dokumenata</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Prikaz datoteke</string>
   <!--new_conversation_activity-->
