--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -408,7 +408,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Kustutan</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Sõnumite kustutamine…</string>
-  <string name="MediaOverviewActivity_Documents">Dokumendid</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumendid</string> -->
   <string name="MediaOverviewActivity_Select_all">Vali kõik</string>
   <string name="MediaOverviewActivity_collecting_attachments">Manuste kogumine…</string>
   <!--- NotificationBarManager-->
@@ -1291,7 +1291,7 @@
   <string name="media_preview__forward_title">Edasta</string>
   <string name="media_preview__all_media_title">Kogu meedia</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Dokumente pole</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Dokumente pole</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Meedia eelvaade</string>
   <!--new_conversation_activity-->
