--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -400,7 +400,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">در حال حذف</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">حذف پیام های…</string>
-  <string name="MediaOverviewActivity_Documents">اسناد</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">اسناد</string> -->
   <string name="MediaOverviewActivity_Select_all">انتخاب همه</string>
   <string name="MediaOverviewActivity_collecting_attachments">در حال جمع‌آوری پیوست‌ها…</string>
   <!--- NotificationBarManager-->
@@ -1277,7 +1277,7 @@
   <string name="media_preview__forward_title">ارسال به دیگری</string>
   <string name="media_preview__all_media_title">تمام رسانه ها</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">اسنادی نیست</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">اسنادی نیست</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">پیش نمایش رسانه</string>
   <!--new_conversation_activity-->
