--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -408,7 +408,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">हटाना</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">मेसेज हटाए जा रहे हैं</string>
-  <string name="MediaOverviewActivity_Documents">दस्तावेज़</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">दस्तावेज़</string> -->
   <string name="MediaOverviewActivity_Select_all">सभी को चुन लो</string>
   <string name="MediaOverviewActivity_collecting_attachments">अटैचमेंट्स सहेज रहें हैं</string>
   <!--- NotificationBarManager-->
@@ -1277,12 +1277,13 @@
   <string name="reminder_header_share_text">जितना अधिक लोग Signal का इस्तेमाल करते है, वह उतना ही बेहतर होता है |</string>
   <string name="reminder_header_service_outage_text">Signal तकनीकी कठिनाइयों का सामना कर रहा है। हम जितनी जल्दी हो सके सेवा बहाल करने के लिए कड़ी मेहनत कर रहे हैं।</string>
   <string name="reminder_header_the_latest_signal_features_wont_work">Signal के नवीनतम फ़ीचर्स Android के इस वर्ज़न पर नहीं चल पाऐंगे। Signal की भावी अपडेट्स के लिये क्रपया अपने डिवाइस को अपग्रेड करें</string>
+  <string name="reminder_header_progress">%1$d%%</string>
   <!--media_preview-->
   <string name="media_preview__save_title">सेव</string>
   <string name="media_preview__forward_title">आगे भेजें</string>
   <string name="media_preview__all_media_title">सभी मीडिया</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">कोई दस्तावेज़ नहीं</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">कोई दस्तावेज़ नहीं</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">मीडिया प्रिव्यु</string>
   <!--new_conversation_activity-->
@@ -1293,9 +1294,27 @@
   <string name="trimmer__deleting_old_messages">पुराने मेसेज को हटा रहा है</string>
   <string name="trimmer__old_messages_successfully_deleted">पुराने संदेश सफलतापूर्वक हटाए गए</string>
   <!--Insights-->
+  <string name="Insights__percent">%</string>
+  <string name="Insights__title">Insights</string>
+  <string name="InsightsDashboardFragment__title">Insights</string>
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Signal प्रोटोकॉल ने पिछले %2$d दिनों में आपके %1$d%% आउटगोइंग संदेशों की स्वचालित रूप से रक्षा की। Signal उपयोगकर्ताओं के बीच वार्तालाप हमेशा अंत-से-अंत एन्क्रिप्टेड होते हैं।</string>
+  <string name="InsightsDashboardFragment__boost_your_signal">Signal बढ़ाएँ</string>
+  <string name="InsightsDashboardFragment__not_enough_data">पर्याप्त डाटा नहीं</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">आपके Insights प्रतिशत की गणना पिछले %1$d दिनों के आउटगोइंग संदेशों के आधार पर की जाती है जो गायब नहीं हुए हैं या मिटाए नहीं गए हैं।</string>
+  <string name="InsightsDashboardFragment__start_a_conversation">एक वार्तालाप शुरु करें</string>
+  <string name="InsightsDashboardFragment__invite_your_contacts">सुरक्षित रूप से संचार करना शुरू करें और Signal में शामिल होने के लिए अधिक संपर्कों को आमंत्रित करके अनएन्क्रिप्टेड एसएमएस संदेशों की सीमाओं से परे जाने वाली नई विशेषताएं को सक्षम करें।</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">ये आँकड़े स्थानीय रूप से आपके डिवाइस पर उत्पन्न हुए थे और केवल आपके द्वारा देखे जा सकते हैं। वे कभी भी कहीं भी प्रेषित नहीं होते हैं।</string>
+  <string name="InsightsDashboardFragment__encrypted_messages">एन्क्रिप्टेड संदेश</string>
   <string name="InsightsDashboardFragment__cancel">रद्द करें</string>
   <string name="InsightsDashboardFragment__send">भेजें</string>
+  <string name="InsightsModalFragment__title">पेश है Insights</string>
+  <string name="InsightsModalFragment__description">यह पता करें कि आपके आउटगोइंग संदेशों में से कितने सुरक्षित रूप से भेजे गए थे, फिर अपने Signal प्रतिशत को बढ़ाने के लिए नए संपर्कों को जल्दी से आमंत्रित करें।</string>
+  <string name="InsightsModalFragment__view_insights">Insights देखें</string>
   <string name="FirstInviteReminder__title">Signal का उपयोग करने के लिए आमंत्रित करें</string>
+  <string name="FirstInviteReminder__description">आप एन्क्रिप्ट भेजे गए संदेशों की संख्या %1$d%% से बढ़ा सकते हैं</string>
+  <string name="SecondInviteReminder__title">अपना Signal बढ़ाएँ</string>
+  <string name="SecondInviteReminder__description">%1$s को आमंत्रित करें</string>
+  <string name="InsightsReminder__view_insights">Insights देखें</string>
   <string name="InsightsReminder__invite">आमंत्रण</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">परिवहन चिह्न</string>
