--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -444,7 +444,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Ištrinama</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Ištrinamos žinutės…</string>
-  <string name="MediaOverviewActivity_Documents">Dokumentai</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumentai</string> -->
   <string name="MediaOverviewActivity_Select_all">Žymėti visus</string>
   <string name="MediaOverviewActivity_collecting_attachments">Renkami priedai…</string>
   <!--- NotificationBarManager-->
@@ -1351,7 +1351,7 @@
   <string name="media_preview__forward_title">Persiųsti</string>
   <string name="media_preview__all_media_title">Visa medija</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Nėra dokumentų</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Nėra dokumentų</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Medijos peržiūra</string>
   <!--new_conversation_activity-->
