--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -408,7 +408,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">हटवत आहे</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">संदेश हटवत आहे…</string>
-  <string name="MediaOverviewActivity_Documents">दस्तऐवज</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">दस्तऐवज</string> -->
   <string name="MediaOverviewActivity_Select_all">सर्व निवडा</string>
   <string name="MediaOverviewActivity_collecting_attachments">संलग्न गोळा करत आहे…</string>
   <!--- NotificationBarManager-->
@@ -1287,7 +1287,7 @@
   <string name="media_preview__forward_title">फॉर्वर्ड करा</string>
   <string name="media_preview__all_media_title">सर्व मिडिया</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">कुठलेही दस्तऐवज नाहीत</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">कुठलेही दस्तऐवज नाहीत</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">मिडिया पुनरावलोकन</string>
   <!--new_conversation_activity-->
