--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -392,7 +392,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Memadam</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Memadam mesej…</string>
-  <string name="MediaOverviewActivity_Documents">Dokumen</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumen</string> -->
   <string name="MediaOverviewActivity_Select_all">Pilih semua</string>
   <string name="MediaOverviewActivity_collecting_attachments">Mengumpul lampiran…</string>
   <!--- NotificationBarManager-->
@@ -1252,7 +1252,7 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="media_preview__forward_title">Hantar</string>
   <string name="media_preview__all_media_title">Semua media</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Tiada dokumen</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Tiada dokumen</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Pratonton media</string>
   <!--new_conversation_activity-->
