--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -444,7 +444,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Удаление</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Удаляем сообщения…</string>
-  <string name="MediaOverviewActivity_Documents">Документы</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Документы</string> -->
   <string name="MediaOverviewActivity_Select_all">Выбрать все</string>
   <string name="MediaOverviewActivity_collecting_attachments">Собираем вложения…</string>
   <!--- NotificationBarManager-->
@@ -1344,7 +1344,7 @@
   <string name="media_preview__forward_title">Переслать</string>
   <string name="media_preview__all_media_title">Все медиа-файлы</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Нет документов</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Нет документов</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Предпросмотр</string>
   <!--new_conversation_activity-->
@@ -1449,7 +1449,7 @@
   <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Вам необходимо ввести свой PIN-код блокировки регистрации</string>
   <string name="RegistrationActivity_incorrect_registration_lock_pin">Неправильный PIN-код блокировки регистрации</string>
   <string name="RegistrationActivity_too_many_attempts">Слишком много попыток</string>
-  <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Вы неправильно ввели PIN-код слишком много раз. Пожалуйста, повторите попытку через день.</string>
+  <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Вы неправильно ввели PIN-код слишком много раз. Пожалуйста, повторите попытку завтра.</string>
   <string name="RegistrationActivity_error_connecting_to_service">Ошибка подключения к сервису</string>
   <string name="RegistrationActivity_oh_no">О нет!</string>
   <string name="RegistrationActivity_registration_of_this_phone_number_will_be_possible_without_your_registration_lock_pin_after_seven_days_have_passed">Регистрация этого номера телефона без PIN-кода блокировки регистрации будет возможна через 7 дней с момента последней активности этого номера в Signal. У вас осталось %d дн.</string>
