--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -408,7 +408,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Po fshihet</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Po fshihen mesazhet…</string>
-  <string name="MediaOverviewActivity_Documents">Dokumente</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Dokumente</string> -->
   <string name="MediaOverviewActivity_Select_all">Përzgjidhi krejt</string>
   <string name="MediaOverviewActivity_collecting_attachments">Po mblidhen bashkëngjitje…</string>
   <!--- NotificationBarManager-->
@@ -1285,7 +1285,7 @@
   <string name="media_preview__forward_title">Përcilleni</string>
   <string name="media_preview__all_media_title">Krejt mediat</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">S\’ka dokumenta</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">S\’ka dokumenta</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Paraparje medie</string>
   <!--new_conversation_activity-->
