--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -315,12 +315,12 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Yakın çekime hazır mısınız?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Artık Signal\'deki arkadaşlarınızla isminizi ve profil fotoğrafınızı paylaşabilirsiniz</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profilleri geldi</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">\'Yazıyor\' göstergeleriyle tanışın.</string>
+  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Yazma göstergeleriyle tanışın.</string>
   <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Artık iletilerin yazıldığını görme ve paylaşma seçeneğine sahipsiniz.</string>
   <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Şimdi etkinleştirmek ister misiniz?</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">\'Yazıyor\' göstergeleri geldi</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">\'Yazıyor\' göstergelerini etkinleştrin.</string>
-  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">\'Yazıyor\' göstergelerini aç</string>
+  <string name="ExperienceUpgradeActivity_typing_ui_title">Yazma göstergeleri geldi</string>
+  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Yazma göstergelerini etkinleştrin.</string>
+  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Yazma göstergelerini aç</string>
   <string name="ExperienceUpgradeActivity_no_thanks">Hayır teşekkürler</string>
   <string name="ExperienceUpgradeActivity_introducing_link_previews">Bağlantı ön izlemeleri ile tanışın.</string>
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">İsteğe bağlı bağlantı ön izlemeleri artık İnternet\'teki bazı gözde siteler için desteklenmektedir.</string>
@@ -408,7 +408,7 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Siliniyor</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">İletiler siliniyor…</string>
-  <string name="MediaOverviewActivity_Documents">Belgeler</string>
+  <!-- Removed by excludeNonTranslatables <string name="MediaOverviewActivity_Documents">Belgeler</string> -->
   <string name="MediaOverviewActivity_Select_all">Hepsini seç</string>
   <string name="MediaOverviewActivity_collecting_attachments">Eklentiler toplanıyor…</string>
   <!--- NotificationBarManager-->
@@ -454,7 +454,7 @@
   <string name="MessageRecord_s_updated_group">%s grubu güncelledi.</string>
   <string name="MessageRecord_s_called_you">%s sizi aradı</string>
   <string name="MessageRecord_called_s">%s arandı</string>
-  <string name="MessageRecord_missed_call_from">%s tarafından cevapsız çağrı</string>
+  <string name="MessageRecord_missed_call_from">%s tarafından cevapsız arama</string>
   <string name="MessageRecord_s_joined_signal">%s Signal\'e katıldı!</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">Kaybolan iletileri devre dışı bıraktınız.</string>
   <string name="MessageRecord_s_disabled_disappearing_messages">%1$s kaybolan iletileri devre dışı bıraktı.</string>
@@ -851,7 +851,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--conversation_item_sent-->
   <string name="conversation_item_sent__send_failed_indicator_description">Gönderme başarısız</string>
   <string name="conversation_item_sent__pending_approval_description">Bekleyen Onaylama</string>
-  <string name="conversation_item_sent__delivered_description">Gönderildi</string>
+  <string name="conversation_item_sent__delivered_description">İletildi</string>
   <string name="conversation_item_sent__message_read">İleti okundu</string>
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kişi fotoğrafı</string>
@@ -877,7 +877,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--device_link_fragment-->
   <string name="device_link_fragment__link_device">Cihaz bağla</string>
   <!--device_list_fragment-->
-  <string name="device_list_fragment__no_devices_linked">Hiç cihaz bağlanmamış</string>
+  <string name="device_list_fragment__no_devices_linked">Bağlı cihaz yok</string>
   <string name="device_list_fragment__link_new_device">Yeni cihaz bağla</string>
   <!--experience_upgrade_activity-->
   <string name="experience_upgrade_activity__continue">devam</string>
@@ -1134,7 +1134,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences__mmsc_username">MMSC Kullanıcı Adı</string>
   <string name="preferences__mmsc_password">MMSC Parolası</string>
   <string name="preferences__sms_delivery_reports">SMS iletim raporları</string>
-  <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Gönderdiğiniz her SMS için iletim raporu iste</string>
+  <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Gönderdiğiniz her SMS için iletim raporu istensin</string>
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Bir sohbet belirlenmiş bir uzunluğu aşınca eski iletileri otomatik olarak sil</string>
   <string name="preferences__delete_old_messages">Eski iletileri sil</string>
   <string name="preferences__chats">Sohbet ve içerik</string>
@@ -1142,8 +1142,8 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences__trim_all_conversations_now">Tüm sohbetleri şimdi kırp</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Tüm sohbetleri tara ve sohbet uzunluğu limitlerini uygula</string>
   <string name="preferences__linked_devices">Bağlı cihazlar</string>
-  <string name="preferences__light_theme">Açık</string>
-  <string name="preferences__dark_theme">Koyu</string>
+  <string name="preferences__light_theme">Aydınlık</string>
+  <string name="preferences__dark_theme">Karanlık</string>
   <string name="preferences__system_theme">Sistem</string>
   <string name="preferences__appearance">Görünüm</string>
   <string name="preferences__theme">Tema</string>
@@ -1151,18 +1151,18 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences__language">Dil</string>
   <string name="preferences__signal_messages_and_calls">Signal iletileri ve aramaları</string>
   <string name="preferences__free_private_messages_and_calls">Signal kullanıcılarına ücretsiz özel iletiler ve aramalar</string>
-  <string name="preferences__submit_debug_log">Hata ayıklama kaydı gönder</string>
-  <string name="preferences__support_wifi_calling">\'WiFi Calling\' uyumluluk modu</string>
-  <string name="preferences__enable_if_your_device_supports_sms_mms_delivery_over_wifi">Cihazınız WiFi üzerinden SMS/MMS iletebiliyorsa etkinleştirin (sadece cihazınızda \'WiFi Üzerinden Arama\' seçeneği etkin ise etkinleştirin)</string>
+  <string name="preferences__submit_debug_log">Hata ayıklama günlüğünü gönder</string>
+  <string name="preferences__support_wifi_calling">\'Kablosuz Ağ Üzerinden Arama\' uyumluluk kipi</string>
+  <string name="preferences__enable_if_your_device_supports_sms_mms_delivery_over_wifi">Cihazınız kablosuz ağ üzerinden SMS/MMS iletebiliyorsa etkinleştirin (sadece cihazınızda \'Kablosuz Ağ Üzerinden Arama\' seçeneği etkin ise etkinleştirin)</string>
   <string name="preferences__incognito_keyboard">Gizli klavye</string>
   <string name="preferences__read_receipts">Okundu bilgisi</string>
   <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Okundu bilgisi etkin değilse, başkalarının okundu bilgilerini göremeyeceksiniz.</string>
-  <string name="preferences__typing_indicators">\'Yazıyor\' göstergeleri</string>
-  <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">\'Yazıyor\' göstergeleri etkin değilse, başkalarının \'Yazıyor\' göstergelerini göremeyeceksiniz.</string>
+  <string name="preferences__typing_indicators">Yazma göstergeleri</string>
+  <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Yazma göstergeleri etkin değilse, başkalarının yazma göstergelerini göremeyeceksiniz.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Klavyenin kişiselleştirilmiş öğrenmeyi devre dışı bırakmasını iste</string>
   <string name="preferences_app_protection__blocked_contacts">Engellenmiş kişiler</string>
   <string name="preferences_chats__when_using_mobile_data">Mobil veri kullanırken</string>
-  <string name="preferences_chats__when_using_wifi">Wi-Fi kullanırken</string>
+  <string name="preferences_chats__when_using_wifi">Kablosuz ağ kullanırken</string>
   <string name="preferences_chats__when_roaming">Dolaşımdayken</string>
   <string name="preferences_chats__media_auto_download">Otomatik içerik indirme</string>
   <string name="preferences_chats__message_trimming">İleti kırpma</string>
@@ -1290,7 +1290,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="media_preview__forward_title">Yönlendir</string>
   <string name="media_preview__all_media_title">Tüm içerik</string>
   <!--media_overview-->
-  <string name="media_overview_documents_fragment__no_documents_found">Belge yok</string>
+  <!-- Removed by excludeNonTranslatables <string name="media_overview_documents_fragment__no_documents_found">Belge yok</string> -->
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">İçerik önizlemesi</string>
   <!--new_conversation_activity-->
@@ -1302,20 +1302,26 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="trimmer__old_messages_successfully_deleted">Eski iletiler başarıyla silindi</string>
   <!--Insights-->
   <string name="Insights__percent">%</string>
+  <string name="Insights__title">Bilgiler</string>
+  <string name="InsightsDashboardFragment__title">Bilgiler</string>
   <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Signal Protokolü geçtiğimiz %2$d gündeki mesajlarınızın %%%1$d kadarını otomatik olarak korudu. Signal kullanıcıları arasındaki sohbetler her zaman uçtan uca şifrelidir.</string>
   <string name="InsightsDashboardFragment__boost_your_signal">Signal\'i güçlendir</string>
   <string name="InsightsDashboardFragment__not_enough_data">Yetersiz veri</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">Bilgiler yüzdeniz son %1$d gün içerisinde kaybolmamış veya silinmemiş giden iletilere göre hesaplanır.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Sohbet başlat</string>
   <string name="InsightsDashboardFragment__invite_your_contacts">Kişilerinizi Signal\'e davet ederek şifresiz SMS iletilerinin sınırlarını aşan yeni özelliklerle, güvenli konuşmaya başlayın.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Bu istatistikler yalnızca cihazınızda oluşturulup sizin tarafınızdan görüntülenebilir. Asla hiçbir yere aktarılmaz.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Şifreli iletiler</string>
   <string name="InsightsDashboardFragment__cancel">İptal</string>
   <string name="InsightsDashboardFragment__send">Gönder</string>
+  <string name="InsightsModalFragment__title">Karşınızda Bilgiler</string>
   <string name="InsightsModalFragment__description">Mesajlarınızın ne kadarının güvenle gönderildiğini öğrenin ve Signal yüzdenizi arttırmak için yeni kişileri davet edin.</string>
+  <string name="InsightsModalFragment__view_insights">Bilgileri Görüntüle</string>
   <string name="FirstInviteReminder__title">Signal\'e davet et</string>
   <string name="FirstInviteReminder__description">Gönderilen şifreli iletilerinizi %%%1$d oranında arttırabilirsiniz</string>
   <string name="SecondInviteReminder__title">Signal\'inizi güçlendirin</string>
   <string name="SecondInviteReminder__description">%1$s kişisini davet et</string>
+  <string name="InsightsReminder__view_insights">Bilgileri Görüntüle</string>
   <string name="InsightsReminder__invite">Davet et</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ulaştırma simgesi</string>
